Refactoring BoardDAO & Using JUnit about BoardDAO(add, getAll)

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-Hi!
-<a ref="/TestServlet"></a>
+<a href="./ControllerServlet">Hi!</a>
 </body>
 </html>
