Making list, add page & Modifing ControllerServlet to handle DAO, View pages

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>BaseCamp Pre-Homework</title>
 </head>
 <body>
-<a href="./ControllerServlet">Hi!</a>
+<a href="./ControllerServlet?action=list">Go to board!!</a>
 </body>
 </html>
