--- a/WebContent/board_add.html
+++ b/WebContent/board_add.html
@@ -1,13 +1,54 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta charset="UTF-8">
+<script src="//code.jquery.com/jquery-1.11.3.js"></script>
+<script type="text/javascript">
+	$(document).ready(function ()
+	{
+		$('input[type=button]').click(function()
+			{
+				var email = $('input[type=text]').val();
+				var email_regex = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/i;
+				if(email_regex.test(email))
+				{
+					alert("test?");
+					$.ajax(
+						{
+							type: "POST",
+							url:  './ControllerServlet',
+							data: $('form').serialize(),
+							success: function(data)
+							{
+								if(data == 'fail')
+								{
+									alert('This email is invalid.(from server)');
+								}
+								else
+								{
+									alert('Insert Success');
+									location.replace("./ControllerServlet?action=list");
+								}
+							},
+							error: function()
+							{
+								alert("Server Error");
+							}
+						});
+				}
+				else
+				{
+					alert('This email address is invalid.(from client)');
+				}
+			});
+		});
+</script>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Add Page</title>
 </head>
 <body>
 <center>
 <h2>Add Page</h2>
-<form action="./ControllerServlet" method="post">
+<form>
 	<input type="hidden" name="action" value="add"/>
 	<table align="center">
 		<tr align="center">
@@ -23,7 +64,7 @@
 			<td><input type="text" name="content" style="height:100px"/></td>
 		</tr>
 	</table>
-	<input type="submit" value="Submit"/>
+	<input type="button" value="Submit"/>
 </form>
 </center>
 </body>
